--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,8 @@
 {
   "presets": [
     [
-      "es2015", {
+      "es2015",
+      {
         "loose": true,
         "modules": false
       }
@@ -10,7 +11,12 @@
   "env": {
     "commonjs": {
       "plugins": [
-        ["transform-es2015-modules-commonjs", { "loose": true }]
+        [
+          "transform-es2015-modules-commonjs",
+          {
+            "loose": true
+          }
+        ]
       ]
     }
   }
