--- a/package.json
+++ b/package.json
@@ -42,14 +42,17 @@
     "build:umd:min": "cross-env BABEL_ENV=commonjs NODE_ENV=production webpack dist/amazon-cognito-identity.min.js",
     "build": "npm run clean && npm run build:commonjs && npm run build:es && npm run build:umd && npm run build:umd:min",
     "doc": "jsdoc src -d docs",
-    "lint": "eslint src"
+    "lint": "eslint src",
+    "test": "cross-env BABEL_ENV=commonjs babel src --out-dir lib && cross-env BABEL_ENV=commonjs babel spec --out-dir lib && jasmine"
   },
   "main": "lib/index.js",
   "module": "es/index.js",
   "jsnext:main": "es/index.js",
   "types": "./index.d.ts",
   "dependencies": {
-    "aws-sdk": "git://github.com/aws/aws-sdk-js.git#react-native"
+    "aws-sdk": "git://github.com/aws/aws-sdk-js.git#react-native",
+    "babel-jest": "^19.0.0",
+    "jasmine": "^2.5.3"
   },
   "devDependencies": {
     "babel-cli": "^6.23.0",
